# entservices-xcast

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: Plugin.instructions.md  PluginOnboardingCompliance.instructions.md  Plugincmake.instructions.md  Pluginconfig.instructions.md  Pluginimplementation.instructions.md  Pluginlifecycle.instructions.md  Pluginmodule.instructions.md
.github/workflows/: L1-tests.yml  native_full_build.yml
GStreamerPlayer/: CMakeLists.txt  GStreamerPlayer.conf.in  GStreamerPlayer.cpp  GStreamerPlayer.h  GStreamerPlayerImplementation.cpp  GStreamerPlayerImplementation.h  Module.h  README.md  commands.md
HelloPlugin/: CMakeLists.txt  HelloPlugin.conf.in  HelloPlugin.cpp  HelloPlugin.h  HelloPluginImplementation.cpp  HelloPluginImplementation.h  Module.h
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_XCast.cpp
XCast/: XCast.cpp  XCast.h  XCastImplementation.cpp  XCastImplementation.h  XCastManager.cpp  XCastManager.h
